--- a/portfolio.html
+++ b/portfolio.html
@@ -26,5 +26,47 @@
             </ul>
         </address>
     </header>
+    <main>
+        <!-- button -->
+        <nav>
+            <ul>
+                <li><button type="button"></button></li>
+                <li><button type="button"></button></li>
+                <li><button type="button"></button></li>
+                <li><button type="button"></button></li>
+
+            </ul>
+        </nav>
+        <!-- section1 -->
+        <section>
+            <img src="./images/img/img.jpg" alt="App">
+            <h3>Banking App Interface Concept</h3>
+            <p>App</p>
+
+            <img src="./images/img/img1.jpg" alt="Marketing">
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+
+            <img src="./images/img/img2.jpg" alt="App">
+            <h3>Meditation App</h3>
+            <p>App</p>
+        </section>
+        <!-- section2 -->
+        <section>
+            <img src="./images/img/imgsection1.jpg" alt="Marketing">
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+
+            <img src="./images/img/imgsection2.jpg" alt="Design">
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+
+            <img src="./images/img/imgsection3.jpg" alt="Marketing">
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+        </section>
+        <!-- section3 -->
+        <section></section>
+    </main>
 </body>
 </html>
