--- a/portfolio.html
+++ b/portfolio.html
@@ -39,29 +39,29 @@
         </nav>
         <!-- section1 -->
         <section>
-            <img src="./images/img/img.jpg" alt="App">
+            <img src="./images/img.jpg" alt="App">
             <h3>Banking App Interface Concept</h3>
             <p>App</p>
 
-            <img src="./images/img/img1.jpg" alt="Marketing">
+            <img src="./images/img1.jpg" alt="Marketing">
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
 
-            <img src="./images/img/img2.jpg" alt="App">
+            <img src="./images/img2.jpg" alt="App">
             <h3>Meditation App</h3>
             <p>App</p>
         </section>
         <!-- section2 -->
         <section>
-            <img src="./images/img/imgsection1.jpg" alt="Marketing">
+            <img src="./images/imgsection1.jpg" alt="Marketing">
             <h3>Taxi Service</h3>
             <p>Marketing</p>
 
-            <img src="./images/img/imgsection2.jpg" alt="Design">
+            <img src="./images/imgsection2.jpg" alt="Design">
             <h3>Screen Illustrations</h3>
             <p>Design</p>
 
-            <img src="./images/img/imgsection3.jpg" alt="Marketing">
+            <img src="./images/imgsection3.jpg" alt="Marketing">
             <h3>Online Courses</h3>
             <p>Marketing</p>
         </section>
