--- a/portfolio.html
+++ b/portfolio.html
@@ -30,10 +30,10 @@
         <!-- button -->
         <nav>
             <ul>
-                <li><button type="button"></button></li>
-                <li><button type="button"></button></li>
-                <li><button type="button"></button></li>
-                <li><button type="button"></button></li>
+                <li><button type="button">All</button></li>
+                <li><button type="button">Web Site</button></li>
+                <li><button type="button">App</button></li>
+                <li><button type="button">Marketing</button></li>
 
             </ul>
         </nav>
