--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <!-- початок -->
@@ -66,7 +68,22 @@
             <p>Marketing</p>
         </section>
         <!-- section3 -->
-        <section></section>
+        <section>
+           <img src="./images/" alt="Design">
+           <h3>Instagram Stories Concept</h3>
+           <p>Design</p>
+
+           <img src="" alt="Web Site">
+           <h3>Organic Food</h3>
+           <p>Web Site</p>
+
+           <img src="" alt="Web Site">
+           <h3>Fresh Coffee</h3>
+           <p>Web Site</p>
+
+
+        </section>
     </main>
 </body>
+
 </html>
