--- a/portfolio.html
+++ b/portfolio.html
@@ -69,15 +69,15 @@
         </section>
         <!-- section3 -->
         <section>
-           <img src="./images/imgbox1.png" alt="Design">
+           <img src="" alt="Design">
            <h3>Instagram Stories Concept</h3>
            <p>Design</p>
 
-           <img src="./images/imgbox2.png" alt="Web Site">
+           <img src="" alt="Web Site">
            <h3>Organic Food</h3>
            <p>Web Site</p>
 
-           <img src="./images/imgbox3.png" alt="Web Site">
+           <img src="" alt="Web Site">
            <h3>Fresh Coffee</h3>
            <p>Web Site</p>
 
