--- a/portfolio.html
+++ b/portfolio.html
@@ -69,21 +69,26 @@
         </section>
         <!-- section3 -->
         <section>
-           <img src="" alt="Design">
-           <h3>Instagram Stories Concept</h3>
-           <p>Design</p>
+            <img src="./images/imgbox1.jpg" alt="Design">
+            <h3>Instagram Stories Concept</h3>
+            <p>Design</p>
 
-           <img src="" alt="Web Site">
-           <h3>Organic Food</h3>
-           <p>Web Site</p>
+            <img src="./images/imgbox2.jpg" alt="Web Site">
+            <h3>Organic Food</h3>
+            <p>Web Site</p>
 
-           <img src="" alt="Web Site">
-           <h3>Fresh Coffee</h3>
-           <p>Web Site</p>
-
+            <img src="./images/imgbox3.jpg" alt="Web Site">
+            <h3>Fresh Coffee</h3>
+            <p>Web Site</p>
 
         </section>
     </main>
+    <footer>
+        <a href="./index.html">WebStudio
+
+        </a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>
 </body>
 
 </html>
