--- a/portfolio.html
+++ b/portfolio.html
@@ -41,43 +41,43 @@
         </nav>
         <!-- section1 -->
         <section>
-            <img src="./images/img.jpg" alt="App">
+            <img src="./images/img.jpg" alt="App" width="360px">
             <h3>Banking App Interface Concept</h3>
             <p>App</p>
 
-            <img src="./images/img1.jpg" alt="Marketing">
+            <img src="./images/img1.jpg" alt="Marketing" width="360px">
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
 
-            <img src="./images/img2.jpg" alt="App">
+            <img src="./images/img2.jpg" alt="App" width="360px">
             <h3>Meditation App</h3>
             <p>App</p>
         </section>
         <!-- section2 -->
         <section>
-            <img src="./images/imgsection1.jpg" alt="Marketing">
+            <img src="./images/imgsection1.jpg" alt="Marketing" width="360px">
             <h3>Taxi Service</h3>
             <p>Marketing</p>
 
-            <img src="./images/imgsection2.jpg" alt="Design">
+            <img src="./images/imgsection2.jpg" alt="Design" width="360px">
             <h3>Screen Illustrations</h3>
             <p>Design</p>
 
-            <img src="./images/imgsection3.jpg" alt="Marketing">
+            <img src="./images/imgsection3.jpg" alt="Marketing" width="360px">
             <h3>Online Courses</h3>
             <p>Marketing</p>
         </section>
         <!-- section3 -->
         <section>
-            <img src="./images/imgbox1.jpg" alt="Design">
+            <img src="./images/imgbox1.jpg" alt="Design" width="360px">
             <h3>Instagram Stories Concept</h3>
             <p>Design</p>
 
-            <img src="./images/imgbox2.jpg" alt="Web Site">
+            <img src="./images/imgbox2.jpg" alt="Web Site" width="360px">
             <h3>Organic Food</h3>
             <p>Web Site</p>
 
-            <img src="./images/imgbox3.jpg" alt="Web Site">
+            <img src="./images/imgbox3.jpg" alt="Web Site" width="360px">
             <h3>Fresh Coffee</h3>
             <p>Web Site</p>
 
