--- a/index.html
+++ b/index.html
@@ -9,34 +9,34 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href=./index.html>WebStudio
+    <header class="header">
+        <nav class="header-nav">
+            <a class="header-logo" href=./index.html>WebStudio
 
             </a>
             <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li class="header-item"><a class="header-link" href="">Studio</a></li>
+                <li class="header-item"><a class="header-link" href="">Portfolio</a></li>
+                <li class="header-item"><a class="header-link" href="">Contacts</a></li>
             </ul>
         </nav>
 
         <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <ul class="header-address">
+                <li class="header-item-addres"><a class="header-link-addres " href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="header-item-addres"><a class="header-link-addres " href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
 
     <main>
-        <section>
-            <h1>Effective Solutions
+        <section class="main-section">
+            <h1 class="main-title" >Effective Solutions
                 for Your Business</h1>
-            <button type="button">Order Service</button>
+            <button class="btm" type="button">Order Service</button>
         </section>
 
-        <section>
+        <section class="main-section">
             <h2>Soft skills</h2>
             <ul>
                 <li>
