--- a/index.html
+++ b/index.html
@@ -39,23 +39,24 @@
         <section class="main-section">
             <h2>Soft skills</h2>
             <ul>
+                
                 <li>
-                    <h3> Strategy</h3>
+                    <h3 class="main-caption" > Strategy</h3>
                     <p>Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. </p>
                 </li>
                 <li>
-                    <h3> Punctuality</h3>
+                    <h3 class="main-caption"> Punctuality</h3>
                     <p>Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
                 <li>
-                    <h3> Diligence</h3>
+                    <h3 class="main-caption"> Diligence</h3>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
                 <li>
-                    <h3> Technologies</h3>
+                    <h3 class="main-caption"> Technologies</h3>
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
@@ -78,22 +79,22 @@
             <ul>
                 <li>
                     <img src="./images/team1.jpg" alt="team" width="264">
-                    <h3>Mark Guerrero</h3>
+                    <h3 class="main-caption">Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/team2.jpg" alt="team" width="264">
-                    <h3>Tom Ford</h3>
+                    <h3 class="main-caption">Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/team3.jpg" alt="team" width="264">
-                    <h3>Camila Garcia</h3>
+                    <h3 class="main-caption">Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/team4.jpg" alt="team" width="264">
-                    <h3>Daniel Wilson</h3>
+                    <h3 class="main-caption">Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
