--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title> 
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -14,7 +15,7 @@
             <a class="header-logo" href=./index.html>WebStudio
 
             </a>
-            <ul>
+            <ul class="header-nav-ul">
                 <li class="header-item"><a class="header-link" href="">Studio</a></li>
                 <li class="header-item"><a class="header-link" href="">Portfolio</a></li>
                 <li class="header-item"><a class="header-link" href="">Contacts</a></li>
@@ -23,7 +24,7 @@
 
         <address>
             <ul class="header-address">
-                <li class="header-item-addres"><a class="header-link-addres " href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="header-item-addres"><a class="header-link-email " href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="header-item-addres"><a class="header-link-addres " href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
