--- a/index.html
+++ b/index.html
@@ -37,28 +37,28 @@
             <button class="btm" type="button">Order Service</button>
         </section>
 
-        <section class="main-section">
-            <h2>Soft skills</h2>
+        <section class="main-box">
+            <h2  class="main-caption-section">Soft skills</h2>
             <ul>
                 
                 <li>
                     <h3 class="main-caption" > Strategy</h3>
-                    <p>Our goal is to identify the business
+                    <p class="main-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. </p>
                 </li>
                 <li>
                     <h3 class="main-caption"> Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                    <p class="main-text">Bring the key message to the brand's audience for the best price within the shortest possible
                         time.</p>
                 </li>
                 <li>
                     <h3 class="main-caption"> Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    <p class="main-text">Research and confirm brands that present the strongest digital growth opportunities and minimize
                         risk.</p>
                 </li>
                 <li>
                     <h3 class="main-caption"> Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                    <p class="main-text">Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
             </ul>
@@ -76,7 +76,7 @@
         </section>
 
         <section>
-            <h2>Our Team</h2>
+            <h2 class="main-caption-section">Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/team1.jpg" alt="team" width="264">
@@ -102,7 +102,7 @@
         </section>
     </main>
     
-    <footer>
+    <footer class="footer">
         <a href=./index.html>WebStudio
 
         </a>
