--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title> 
+    <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -24,49 +24,55 @@
 
         <address>
             <ul class="header-address">
-                <li class="header-item-addres"><a class="header-link-email " href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="header-item-addres"><a class="header-link-addres " href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li class="header-item-addres"><a class="header-link-email "
+                        href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="header-item-addres"><a class="header-link-addres " href="tel:+110001111111">+11 (000)
+                        111-11-11</a></li>
             </ul>
         </address>
     </header>
 
     <main>
         <section class="main-section">
-            <h1 class="main-title" >Effective Solutions
+            <h1 class="main-title">Effective Solutions
                 for Your Business</h1>
-            <button class="btm" type="button">Order Service</button>
+            <button class="btn" type="button"> Order Servic</button>
         </section>
 
         <section class="main-box">
-            <h2  class="main-caption-section">Soft skills</h2>
+
+
             <ul>
-                
+
                 <li>
-                    <h3 class="main-caption" > Strategy</h3>
+                    <h3 class="main-caption"> Strategy</h3>
                     <p class="main-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. </p>
                 </li>
                 <li>
                     <h3 class="main-caption"> Punctuality</h3>
-                    <p class="main-text">Bring the key message to the brand's audience for the best price within the shortest possible
+                    <p class="main-text">Bring the key message to the brand's audience for the best price within the
+                        shortest possible
                         time.</p>
                 </li>
                 <li>
                     <h3 class="main-caption"> Diligence</h3>
-                    <p class="main-text">Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    <p class="main-text">Research and confirm brands that present the strongest digital growth
+                        opportunities and minimize
                         risk.</p>
                 </li>
                 <li>
                     <h3 class="main-caption"> Technologies</h3>
-                    <p class="main-text">Design practice focused on digital experiences. We bring forth a deep passion for
+                    <p class="main-text">Design practice focused on digital experiences. We bring forth a deep passion
+                        for
                         problem-solving.</p>
                 </li>
             </ul>
 
         </section>
 
-        <section>
-            <h2>What are we doing</h2>
+        <section class="container">
+            <h2 class="main-sabject">What are we doing</h2>
             <ul>
                 <li><img src="./images/doing1.jpg" alt="photo" width="360"></li>
                 <li><img src="./images/doing2.jpg" alt="photo" width="360"></li>
@@ -76,40 +82,41 @@
         </section>
 
         <section>
-            <h2 class="main-caption-section">Our Team</h2>
+            <h2 class="main-sabject">Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/team1.jpg" alt="team" width="264">
                     <h3 class="main-caption">Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <p class="main-text">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/team2.jpg" alt="team" width="264">
                     <h3 class="main-caption">Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <p class="main-text">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/team3.jpg" alt="team" width="264">
                     <h3 class="main-caption">Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <p class="main-text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/team4.jpg" alt="team" width="264">
                     <h3 class="main-caption">Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <p class="main-text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
-    
+
     <footer class="footer">
         <a href=./index.html>WebStudio
 
         </a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <p class="main-text">Increase the flow of customers and sales for your business with digital marketing & growth
+            solutions.</p>
     </footer>
 
-    <button class="best" type="button">Order Service</button>
+    <button class="btn" type="button">Order Service</button>
 
 </body>
 
