--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -14,17 +15,17 @@
         <a href="./index.html">WebStudio
 
         </a>
-        <nav>
+        <nav class="nav-portfolia">
             <ul>
-                <li><a href=""></a>Studio</li>
-                <li><a href=""></a>Portfolio</li>
-                <li><a href=""></a>Contacts</li>
+                <li><a class="header-link" href="">Studio</a></li>
+                <li><a class="header-link" href="">Portfolio</a></li>
+                <li><a class="header-link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a class="header-link-email" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="header-link-addres" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
@@ -32,54 +33,54 @@
         <!-- button -->
         <nav>
             <ul>
-                <li><button type="button">All</button></li>
-                <li><button type="button">Web Site</button></li>
-                <li><button type="button">App</button></li>
-                <li><button type="button">Marketing</button></li>
+                <li><button class="nav-btn-pt" type="button">All</button></li>
+                <li><button class="nav-btn-pt" type="button">Web Site</button></li>
+                <li><button class="nav-btn-pt" type="button">App</button></li>
+                <li><button class="nav-btn-pt" type="button">Marketing</button></li>
 
             </ul>
         </nav>
         <!-- section1 -->
         <section>
             <img src="./images/img.jpg" alt="App" width="360px">
-            <h3>Banking App Interface Concept</h3>
-            <p>App</p>
+            <h3 class="main-caption">Banking App Interface Concept</h3>
+            <p class="main-text">App</p>
 
             <img src="./images/img1.jpg" alt="Marketing" width="360px">
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="main-caption">Cashless Payment</h3>
+            <p class="main-text">Marketing</p>
 
             <img src="./images/img2.jpg" alt="App" width="360px">
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="main-caption">Meditation App</h3>
+            <p class="main-text">App</p>
         </section>
         <!-- section2 -->
         <section>
             <img src="./images/imgsection1.jpg" alt="Marketing" width="360px">
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="main-caption">Taxi Service</h3>
+            <p class="main-text">Marketing</p>
 
             <img src="./images/imgsection2.jpg" alt="Design" width="360px">
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="main-caption">Screen Illustrations</h3>
+            <p class="main-text">Design</p>
 
             <img src="./images/imgsection3.jpg" alt="Marketing" width="360px">
-            <h3>Online Courses</h3>
+            <h3 class="main-caption">Online Courses</h3>
             <p>Marketing</p>
         </section>
         <!-- section3 -->
         <section>
             <img src="./images/imgbox1.jpg" alt="Design" width="360px">
-            <h3>Instagram Stories Concept</h3>
+            <h3 class="main-caption">Instagram Stories Concept</h3>
             <p>Design</p>
 
             <img src="./images/imgbox2.jpg" alt="Web Site" width="360px">
-            <h3>Organic Food</h3>
-            <p>Web Site</p>
+            <h3 class="main-caption">Organic Food</h3>
+            <p class="main-text">Web Site</p>
 
             <img src="./images/imgbox3.jpg" alt="Web Site" width="360px">
-            <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
+            <h3 class="main-caption">Fresh Coffee</h3>
+            <p class="main-text">Web Site</p>
 
         </section>
     </main>
@@ -87,7 +88,8 @@
         <a href="./index.html">WebStudio
 
         </a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <p class="main-text">Increase the flow of customers and sales for your business with digital marketing & growth
+            solutions.</p>
     </footer>
 </body>
 
