--- a/portfolio.html
+++ b/portfolio.html
@@ -42,43 +42,43 @@
         </nav>
         <!-- section1 -->
         <section>
-            <img src="./images/img.jpg" alt="App" width="360px">
+            <img src="./images/img.jpg" alt="App" width="360">
             <h3 class="main-caption">Banking App Interface Concept</h3>
             <p class="main-text">App</p>
 
-            <img src="./images/img1.jpg" alt="Marketing" width="360px">
+            <img src="./images/img1.jpg" alt="Marketing" width="360">
             <h3 class="main-caption">Cashless Payment</h3>
             <p class="main-text">Marketing</p>
 
-            <img src="./images/img2.jpg" alt="App" width="360px">
+            <img src="./images/img2.jpg" alt="App" width="360">
             <h3 class="main-caption">Meditation App</h3>
             <p class="main-text">App</p>
         </section>
         <!-- section2 -->
         <section>
-            <img src="./images/imgsection1.jpg" alt="Marketing" width="360px">
+            <img src="./images/imgsection1.jpg" alt="Marketing" width="360">
             <h3 class="main-caption">Taxi Service</h3>
             <p class="main-text">Marketing</p>
 
-            <img src="./images/imgsection2.jpg" alt="Design" width="360px">
+            <img src="./images/imgsection2.jpg" alt="Design" width="360">
             <h3 class="main-caption">Screen Illustrations</h3>
             <p class="main-text">Design</p>
 
-            <img src="./images/imgsection3.jpg" alt="Marketing" width="360px">
+            <img src="./images/imgsection3.jpg" alt="Marketing" width="360">
             <h3 class="main-caption">Online Courses</h3>
             <p>Marketing</p>
         </section>
         <!-- section3 -->
         <section>
-            <img src="./images/imgbox1.jpg" alt="Design" width="360px">
+            <img src="./images/imgbox1.jpg" alt="Design" width="360">
             <h3 class="main-caption">Instagram Stories Concept</h3>
             <p>Design</p>
 
-            <img src="./images/imgbox2.jpg" alt="Web Site" width="360px">
+            <img src="./images/imgbox2.jpg" alt="Web Site" width="360">
             <h3 class="main-caption">Organic Food</h3>
             <p class="main-text">Web Site</p>
 
-            <img src="./images/imgbox3.jpg" alt="Web Site" width="360px">
+            <img src="./images/imgbox3.jpg" alt="Web Site" width="360">
             <h3 class="main-caption">Fresh Coffee</h3>
             <p class="main-text">Web Site</p>
 
