--- a/portfolio.html
+++ b/portfolio.html
@@ -16,14 +16,14 @@
 
         </a>
         <nav class="nav-portfolia">
-            <ul>
+            <ul class="list">
                 <li><a class="header-link" href="">Studio</a></li>
                 <li><a class="header-link" href="">Portfolio</a></li>
                 <li><a class="header-link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
-            <ul>
+            <ul class="list">
                 <li><a class="header-link-email" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="header-link-addres" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
@@ -32,7 +32,7 @@
     <main>
         <!-- button -->
         <nav>
-            <ul>
+            <ul class="list">
                 <li><button class="nav-btn-pt" type="button">All</button></li>
                 <li><button class="nav-btn-pt" type="button">Web Site</button></li>
                 <li><button class="nav-btn-pt" type="button">App</button></li>
