--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
+
+
 </head>
 
 <body>
@@ -15,7 +22,7 @@
             <a class="header-logo" href=./index.html>WebStudio
 
             </a>
-            <ul class="header-nav-ul">
+            <ul class="header-nav-ul list">
                 <li class="header-item"><a class="header-link" href="">Studio</a></li>
                 <li class="header-item"><a class="header-link" href="">Portfolio</a></li>
                 <li class="header-item"><a class="header-link" href="">Contacts</a></li>
@@ -23,7 +30,7 @@
         </nav>
 
         <address>
-            <ul class="header-address">
+            <ul class="header-address list">
                 <li class="header-item-addres"><a class="header-link-email "
                         href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="header-item-addres"><a class="header-link-addres " href="tel:+110001111111">+11 (000)
@@ -42,7 +49,7 @@
         <section class="main-box">
 
 
-            <ul>
+            <ul class="list">
 
                 <li>
                     <h3 class="main-caption"> Strategy</h3>
@@ -73,7 +80,7 @@
 
         <section class="container">
             <h2 class="main-sabject">What are we doing</h2>
-            <ul>
+            <ul class="list">
                 <li><img src="./images/doing1.jpg" alt="photo" width="360"></li>
                 <li><img src="./images/doing2.jpg" alt="photo" width="360"></li>
                 <li> <img src="./images/doing3.jpg" alt="photo" width="360"></li>
@@ -83,7 +90,7 @@
 
         <section>
             <h2 class="main-sabject">Our Team</h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/team1.jpg" alt="team" width="264">
                     <h3 class="main-caption">Mark Guerrero</h3>
