--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
 
 
 </head>
@@ -19,8 +19,7 @@
 <body>
     <header class="header">
         <nav class="header-nav">
-            <a class="header-logo" href=./index.html>WebStudio
-
+            <a class="header-logo " href="./index.html">Web<span class="logo-studio">Studio</span> 
             </a>
             <ul class="header-nav-ul list">
                 <li class="header-item"><a class="header-link" href="">Studio</a></li>
@@ -116,7 +115,7 @@
     </main>
 
     <footer class="footer">
-        <a href=./index.html>WebStudio
+        <a class="header-logo " href="./index.html">Web<span class="logo-studio">Studio</span> 
 
         </a>
         <p class="main-text">Increase the flow of customers and sales for your business with digital marketing & growth
