--- a/portfolio.html
+++ b/portfolio.html
@@ -6,18 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
+
     <!-- fonts -->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
     <header>
         <!-- початок -->
-        <a href="./index.html">WebStudio
+        <a class="header-logo " href="./index.html">Web<span class="logo-studio">Studio</span> 
 
         </a>
         <nav class="nav-portfolia">
@@ -90,7 +92,7 @@
         </section>
     </main>
     <footer>
-        <a href="./index.html">WebStudio
+        <a class="header-logo" href="./index.html">Web<span class="logo-studio">Studio</span>
 
         </a>
         <p class="main-text">Increase the flow of customers and sales for your business with digital marketing & growth
