--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 </head>
 
 <body>
+   
     <header class="header">
         <nav class="header-nav">
-            <a class="header-logo " href="./index.html">Web<span class="logo-studio">Studio</span> 
+            <a class="header-logo link" href="./index.html">Web<span class="logo-studio ">Studio</span> 
             </a>
             <ul class="header-nav-ul list">
                 <li class="header-item"><a class="header-link" href="">Studio</a></li>
