--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <!-- початок -->
-        <a class="header-logo " href="./index.html">Web<span class="logo-studio">Studio</span> 
+        <a class="header-logo " href="./portfolio.html">Web<span class="logo-studio">Studio</span> 
 
         </a>
         <nav class="nav-portfolia">
@@ -29,7 +29,7 @@
                 <li><a class="header-link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="portfolio-addres">
             <ul class="list">
                 <li><a class="header-link-email" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="header-link-addres" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
@@ -92,7 +92,7 @@
         </section>
     </main>
     <footer>
-        <a class="header-logo" href="./index.html">Web<span class="logo-studio">Studio</span>
+        <a class="header-logo" href="./portfolio.html">Web<span class="logo-studio">Studio</span>
 
         </a>
         <p class="main-text">Increase the flow of customers and sales for your business with digital marketing & growth
