--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </ul>
         </section>
     </main>
-
+    href="./index.html"
     <footer class="footer">
         <a class="header-logo " href="./index.html">Web<span class="logo-studio">Studio</span> 
 
