--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,11 @@
 
 </head>
 
+
 <body>
     <header>
         <!-- початок -->
-        <a class="header-logo " href="./portfolio.html">Web<span class="logo-studio">Studio</span> 
+        <a class="header-logo " href="./portfolio.html">Web<span class="logo-studio">Studio</span>
 
         </a>
         <nav class="nav-portfolia">
@@ -37,18 +38,23 @@
         </address>
     </header>
     <main>
-        <!-- button -->
-        <nav>
-            <ul class="list">
-                <li><button class="nav-btn-pt" type="button">All</button></li>
-                <li><button class="nav-btn-pt" type="button">Web Site</button></li>
-                <li><button class="nav-btn-pt" type="button">App</button></li>
-                <li><button class="nav-btn-pt" type="button">Marketing</button></li>
 
-            </ul>
-        </nav>
-        <!-- section1 -->
-        <section>
+        <section class="section list">
+
+            <h1>button</h1>
+            <a href="#" hidden>Приховане посилання </a>
+            <!-- button -->
+            <nav>
+                <ul class="list">
+                    <li><button class="nav-btn-pt" type="button">All</button></li>
+                    <li><button class="nav-btn-pt" type="button">Web Site</button></li>
+                    <li><button class="nav-btn-pt" type="button">App</button></li>
+                    <li><button class="nav-btn-pt" type="button">Marketing</button></li>
+
+                </ul>
+            </nav>
+            <!-- section1 -->
+
             <img src="./images/img.jpg" alt="App" width="360">
             <h3 class="main-caption">Banking App Interface Concept</h3>
             <p class="main-text">App</p>
@@ -60,9 +66,9 @@
             <img src="./images/img2.jpg" alt="App" width="360">
             <h3 class="main-caption">Meditation App</h3>
             <p class="main-text">App</p>
-        </section>
-        <!-- section2 -->
-        <section>
+
+            <!-- section2 -->
+
             <img src="./images/imgsection1.jpg" alt="Marketing" width="360">
             <h3 class="main-caption">Taxi Service</h3>
             <p class="main-text">Marketing</p>
@@ -74,9 +80,9 @@
             <img src="./images/imgsection3.jpg" alt="Marketing" width="360">
             <h3 class="main-caption">Online Courses</h3>
             <p>Marketing</p>
-        </section>
-        <!-- section3 -->
-        <section>
+
+            <!-- section3 -->
+
             <img src="./images/imgbox1.jpg" alt="Design" width="360">
             <h3 class="main-caption">Instagram Stories Concept</h3>
             <p>Design</p>
@@ -88,6 +94,7 @@
             <img src="./images/imgbox3.jpg" alt="Web Site" width="360">
             <h3 class="main-caption">Fresh Coffee</h3>
             <p class="main-text">Web Site</p>
+
 
         </section>
     </main>
