--- a/index.html
+++ b/index.html
@@ -49,26 +49,26 @@
         <section class="main-box">
 
 
-            <ul class="list">
+            <ul class="box list">
 
-                <li>
+                <li class="section-end">
                     <h3 class="main-caption"> Strategy</h3>
                     <p class="main-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. </p>
                 </li>
-                <li>
+                <li class="section-end">
                     <h3 class="main-caption"> Punctuality</h3>
                     <p class="main-text">Bring the key message to the brand's audience for the best price within the
                         shortest possible
                         time.</p>
                 </li>
-                <li>
+                <li class="section-end">
                     <h3 class="main-caption"> Diligence</h3>
                     <p class="main-text">Research and confirm brands that present the strongest digital growth
                         opportunities and minimize
                         risk.</p>
                 </li>
-                <li>
+                <li class="section-end">
                     <h3 class="main-caption"> Technologies</h3>
                     <p class="main-text">Design practice focused on digital experiences. We bring forth a deep passion
                         for
@@ -88,25 +88,25 @@
 
         </section>
 
-        <section>
+        <section class="section-the-end">
             <h2 class="main-sabject">Our Team</h2>
             <ul class="list">
-                <li>
+                <li class="section-end">
                     <img src="./images/team1.jpg" alt="team" width="264">
                     <h3 class="main-caption">Mark Guerrero</h3>
                     <p class="main-text">Product Designer</p>
                 </li>
-                <li>
+                <li class="section-end">
                     <img src="./images/team2.jpg" alt="team" width="264">
                     <h3 class="main-caption">Tom Ford</h3>
                     <p class="main-text">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="section-end">
                     <img src="./images/team3.jpg" alt="team" width="264">
                     <h3 class="main-caption">Camila Garcia</h3>
                     <p class="main-text">Marketing</p>
                 </li>
-                <li>
+                <li class="section-end">
                     <img src="./images/team4.jpg" alt="team" width="264">
                     <h3 class="main-caption">Daniel Wilson</h3>
                     <p class="main-text">UI Designer</p>
