--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
         </section>
     </main>
     href="./index.html"
-    <footer class="footer">
-        <a class="header-logo " href="./index.html">Web<span class="logo-studio">Studio</span> 
+    <footer class="The-end">
+        <a class="header-logo link" href="./index.html">Web<span class="logo-studio-end">Studio</span> 
 
         </a>
         <p class="main-text">Increase the flow of customers and sales for your business with digital marketing & growth
