--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             </ul>
         </nav>
 
-        <address>
-            <ul class="header-address list">
+        <address class="address">
+            <ul class="header-address link">
                 <li class="header-item-addres"><a class="header-link-email "
                         href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="header-item-addres"><a class="header-link-addres " href="tel:+110001111111">+11 (000)
@@ -114,8 +114,7 @@
             </ul>
         </section>
     </main>
-    href="./index.html"
-    <footer class="The-end">
+    <footer class="the-end">
         <a class="header-logo link" href="./index.html">Web<span class="logo-studio-end">Studio</span> 
 
         </a>
