--- a/portfolio.html
+++ b/portfolio.html
@@ -20,89 +20,89 @@
 <body>
     <header>
         <!-- початок -->
-        <a class="header-logo " href="./portfolio.html">Web<span class="logo-studio">Studio</span>
+        <a class=" " href="./portfolio.html">Web<span class="">Studio</span>
 
         </a>
         <nav class="nav-portfolia">
-            <ul class="list">
-                <li><a class="header-link" href="">Studio</a></li>
-                <li><a class="header-link" href="">Portfolio</a></li>
-                <li><a class="header-link" href="">Contacts</a></li>
+            <ul class="">
+                <li><a class="he" href="">Studio</a></li>
+                <li><a class="he" href="">Portfolio</a></li>
+                <li><a class="he" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="portfolio-addres">
-            <ul class="list">
-                <li><a class="header-link-email" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="header-link-addres" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <ul class="">
+                <li><a class="" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
 
-        <section class="section list">
+        <section class="">
 
             <h1>button</h1>
             <a href="#" hidden>Приховане посилання </a>
             <!-- button -->
             <nav>
-                <ul class="list">
-                    <li><button class="nav-btn-pt" type="button">All</button></li>
-                    <li><button class="nav-btn-pt" type="button">Web Site</button></li>
-                    <li><button class="nav-btn-pt" type="button">App</button></li>
-                    <li><button class="nav-btn-pt" type="button">Marketing</button></li>
+                <ul class="">
+                    <li><button class="" type="button">All</button></li>
+                    <li><button class="" type="button">Web Site</button></li>
+                    <li><button class="" type="button">App</button></li>
+                    <li><button class="" type="button">Marketing</button></li>
 
                 </ul>
             </nav>
             <!-- section1 -->
 
             <img src="./images/img.jpg" alt="App" width="360">
-            <h3 class="main-caption">Banking App Interface Concept</h3>
-            <p class="main-text">App</p>
+            <h3 class="">Banking App Interface Concept</h3>
+            <p class="">App</p>
 
             <img src="./images/img1.jpg" alt="Marketing" width="360">
-            <h3 class="main-caption">Cashless Payment</h3>
-            <p class="main-text">Marketing</p>
+            <h3 class="mai">Cashless Payment</h3>
+            <p class="">Marketing</p>
 
             <img src="./images/img2.jpg" alt="App" width="360">
-            <h3 class="main-caption">Meditation App</h3>
-            <p class="main-text">App</p>
+            <h3 class="mai">Meditation App</h3>
+            <p class="">App</p>
 
             <!-- section2 -->
 
             <img src="./images/imgsection1.jpg" alt="Marketing" width="360">
-            <h3 class="main-caption">Taxi Service</h3>
-            <p class="main-text">Marketing</p>
+            <h3 class="">Taxi Service</h3>
+            <p class="">Marketing</p>
 
             <img src="./images/imgsection2.jpg" alt="Design" width="360">
-            <h3 class="main-caption">Screen Illustrations</h3>
-            <p class="main-text">Design</p>
+            <h3 class="">Screen Illustrations</h3>
+            <p class="">Design</p>
 
             <img src="./images/imgsection3.jpg" alt="Marketing" width="360">
-            <h3 class="main-caption">Online Courses</h3>
+            <h3 class="">Online Courses</h3>
             <p>Marketing</p>
 
             <!-- section3 -->
 
             <img src="./images/imgbox1.jpg" alt="Design" width="360">
-            <h3 class="main-caption">Instagram Stories Concept</h3>
+            <h3 class="">Instagram Stories Concept</h3>
             <p>Design</p>
 
             <img src="./images/imgbox2.jpg" alt="Web Site" width="360">
-            <h3 class="main-caption">Organic Food</h3>
-            <p class="main-text">Web Site</p>
+            <h3 class="">Organic Food</h3>
+            <p class="">Web Site</p>
 
             <img src="./images/imgbox3.jpg" alt="Web Site" width="360">
-            <h3 class="main-caption">Fresh Coffee</h3>
-            <p class="main-text">Web Site</p>
+            <h3 class="">Fresh Coffee</h3>
+            <p class="">Web Site</p>
 
 
         </section>
     </main>
     <footer>
-        <a class="header-logo" href="./portfolio.html">Web<span class="logo-studio">Studio</span>
+        <a class="" href="./portfolio.html">Web<span class="">Studio</span>
 
         </a>
-        <p class="main-text">Increase the flow of customers and sales for your business with digital marketing & growth
+        <p class="">Increase the flow of customers and sales for your business with digital marketing & growth
             solutions.</p>
     </footer>
 </body>
