--- a/portfolio.html
+++ b/portfolio.html
@@ -20,14 +20,15 @@
 <body>
     <header>
         <!-- початок -->
-        <a class=" " href="./portfolio.html">Web<span class="">Studio</span>
 
-        </a>
-        <nav class="nav-portfolia">
+        <nav class="nav-portfolia list">
+            <a class="logo-portfolio list" href="./portfolio.html">Web<span class="logo-span">Studio</span>
+
+            </a>
             <ul class="">
-                <li><a class="he" href="">Studio</a></li>
-                <li><a class="he" href="">Portfolio</a></li>
-                <li><a class="he" href="">Contacts</a></li>
+                <li><a class="" href="">Studio</a></li>
+                <li><a class="" href="">Portfolio</a></li>
+                <li><a class="" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="portfolio-addres">
