--- a/portfolio.html
+++ b/portfolio.html
@@ -22,19 +22,19 @@
         <!-- початок -->
 
         <nav class="nav-portfolia list">
-            <a class="logo-portfolio list" href="./portfolio.html">Web<span class="logo-span">Studio</span>
+            <a class="logo-portfolio-link" href="./index.html">Web<span class="logo-span">Studio</span>
 
             </a>
-            <ul class="">
-                <li><a class="" href="">Studio</a></li>
-                <li><a class="" href="">Portfolio</a></li>
-                <li><a class="" href="">Contacts</a></li>
+            <ul class="list">
+                <li><a class="portfolio-navigation" href="">Studio</a></li>
+                <li><a class="portfolio-navigation" href="">Portfolio</a></li>
+                <li><a class="portfolio-navigation" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="portfolio-addres">
-            <ul class="">
-                <li><a class="" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <ul class="list">
+                <li><a class="address-navigation link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="address-navigation link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
