--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             </ul>
         </nav>
 
-        <address class="address">
+        <address class="address list">
             <ul class="header-address link">
-                <li class="header-item-addres"><a class="header-link-email "
+                <li class="header-item-addres link"><a class="header-link-email "
                         href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="header-item-addres"><a class="header-link-addres " href="tel:+110001111111">+11 (000)
+                <li class="header-item-addres link"><a class="header-link-addres " href="tel:+110001111111">+11 (000)
                         111-11-11</a></li>
             </ul>
         </address>
