--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
         <!-- початок -->
 
         <nav class="nav-portfolia list">
-            <a class="logo-portfolio-link" href="./index.html">Web<span class="logo-span">Studio</span>
+            <a class="logo-portfolio link" href="./index.html">Web<span class="logo-span">Studio</span>
 
             </a>
             <ul class="list">
