--- a/portfolio.html
+++ b/portfolio.html
@@ -26,9 +26,9 @@
 
             </a>
             <ul class="list">
-                <li><a class="portfolio-navigation" href="">Studio</a></li>
-                <li><a class="portfolio-navigation" href="">Portfolio</a></li>
-                <li><a class="portfolio-navigation" href="">Contacts</a></li>
+                <li><a class="portfolio-navigation link" href="">Studio</a></li>
+                <li><a class="portfolio-navigation link" href="">Portfolio</a></li>
+                <li><a class="portfolio-navigation link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="portfolio-addres">
