--- a/portfolio.html
+++ b/portfolio.html
@@ -40,20 +40,20 @@
     </header>
     <main>
 
-        <section class="">
+        <section class="list">
 
             <h1>button</h1>
             <a href="#" hidden>Приховане посилання </a>
             <!-- button -->
-            <nav>
-                <ul class="">
-                    <li><button class="" type="button">All</button></li>
-                    <li><button class="" type="button">Web Site</button></li>
-                    <li><button class="" type="button">App</button></li>
-                    <li><button class="" type="button">Marketing</button></li>
 
-                </ul>
-            </nav>
+            <ul class="">
+                <li><button class="all-button" type="button">All</button></li>
+                <li><button class="" type="button">Web Site</button></li>
+                <li><button class="" type="button">App</button></li>
+                <li><button class="" type="button">Marketing</button></li>
+
+            </ul>
+
             <!-- section1 -->
 
             <img src="./images/img.jpg" alt="App" width="360">
