--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
             <a href="#" hidden>Приховане посилання </a>
             <!-- button -->
 
-            <ul class="">
+            <ul class="portfolio-button list">
                 <li><button class="all-button" type="button">All</button></li>
                 <li><button class="" type="button">Web Site</button></li>
                 <li><button class="" type="button">App</button></li>
