--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 </head>
 
 <body>
-   
+
     <header class="header">
         <nav class="header-nav">
-            <a class="header-logo link" href="./index.html">Web<span class="logo-studio ">Studio</span> 
+            <a class="header-logo link" href="./index.html">Web<span class="logo-studio ">Studio</span>
             </a>
             <ul class="header-nav-ul list">
                 <li class="header-item"><a class="header-link" href="">Studio</a></li>
@@ -52,7 +52,7 @@
             <ul class="box list">
 
                 <li class="section-end">
-                    <h3 class="main-caption"> Strategy</h3>
+                    <h2 hidden class="main-caption"> Strategy</h2>
                     <p class="main-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. </p>
                 </li>
@@ -115,7 +115,7 @@
         </section>
     </main>
     <footer class="the-end">
-        <a class="header-logo link" href="./index.html">Web<span class="logo-studio-end">Studio</span> 
+        <a class="header-logo link" href="./index.html">Web<span class="logo-studio-end">Studio</span>
 
         </a>
         <p class="main-text">Increase the flow of customers and sales for your business with digital marketing & growth
