--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <a class="header-logo link" href="./index.html">Web<span class="logo-studio ">Studio</span>
             </a>
             <ul class="header-nav-ul list">
-                <li class="header-item"><a class="header-link" href="">Studio</a></li>
-                <li class="header-item"><a class="header-link" href="">Portfolio</a></li>
-                <li class="header-item"><a class="header-link" href="">Contacts</a></li>
+                <li class="header-item"><a class="header-link link" href="./index.html">Studio</a></li>
+                <li class="header-item"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
+                <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
             </ul>
         </nav>
 
@@ -40,7 +40,7 @@
     </header>
 
     <main>
-        <section class="main-section">
+        <section class="">
             <h1 class="main-title">Effective Solutions
                 for Your Business</h1>
             <button class="btn" type="button"> Order Servic</button>
@@ -52,7 +52,7 @@
             <ul class="box list">
 
                 <li class="section-end">
-                    <h2 hidden class="main-caption"> Strategy</h2>
+                    <h2  class="main-caption" hidden> Strategy</h2>
                     <p class="main-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. </p>
                 </li>
