--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
             </ul>
         </nav>
 
-        <address class="address list">
+        <address class="contacts list">
             <ul class="header-address link">
-                <li class="header-item-addres link"><a class="header-link-email "
+                <li class="header-item-addres link"><a class="header-link-email link "
                         href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="header-item-addres link"><a class="header-link-addres " href="tel:+110001111111">+11 (000)
+                <li class="header-item-addres link"><a class="header-link-addres link " href="tel:+110001111111">+11
+                        (000)
                         111-11-11</a></li>
             </ul>
         </address>
@@ -52,7 +53,7 @@
             <ul class="box list">
 
                 <li class="section-end">
-                    <h2  class="main-caption" hidden> Strategy</h2>
+                    <h2 class="main-caption" hidden> Strategy</h2>
                     <p class="main-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. </p>
                 </li>
