--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="header-nav">
             <a class="header-logo link" href="./index.html">Web<span class="logo-studio ">Studio</span>
             </a>
-            <ul class="header-nav-ul list">
+            <ul class="list">
                 <li class="header-item"><a class="header-link link" href="./index.html">Studio</a></li>
                 <li class="header-item"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
                 <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
