--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
 
         <address class="contacts list">
-            <ul class="header-address link">
+            <ul class="list">
                 <li class="header-item-addres link"><a class="header-link-email link "
                         href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="header-item-addres link"><a class="header-link-addres link " href="tel:+110001111111">+11
