--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <a class="header-logo link" href="./index.html">Web<span class="logo-studio ">Studio</span>
             </a>
             <ul class="list">
-                <li class="header-item"><a class="header-link link" href="./index.html">Studio</a></li>
-                <li class="header-item"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
-                <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
+                <li class="header-item"><a class="header-items link" href="./index.html">Studio</a></li>
+                <li class="header-item"><a class="header-items link" href="./portfolio.html">Portfolio</a></li>
+                <li class="header-item"><a class="header-items link" href="">Contacts</a></li>
             </ul>
         </nav>
 
