--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
         <address class="contacts list">
             <ul class="list">
-                <li class="header-item-addres link"><a class="header-link-email link "
+                <li class="header-item-addres link"><a class="header-email link "
                         href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="header-item-addres link"><a class="header-link-addres link " href="tel:+110001111111">+11
+                <li class="header-item-addres link"><a class="header-address link " href="tel:+110001111111">+11
                         (000)
                         111-11-11</a></li>
             </ul>
