--- a/index.html
+++ b/index.html
@@ -41,14 +41,13 @@
     </header>
 
     <main>
-        <section class="">
+        <section class="main-section">
             <h1 class="main-title">Effective Solutions
                 for Your Business</h1>
             <button class="btn" type="button"> Order Servic</button>
         </section>
 
         <section class="main-box">
-
 
             <ul class="box list">
 
