--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,8 @@
 
             </a>
             <ul class="list">
-                <li><a class="portfolio-navigation link" href="">Studio</a></li>
-                <li><a class="portfolio-navigation link" href="">Portfolio</a></li>
+                <li><a class="portfolio-navigation link" href="./index.html">Studio</a></li>
+                <li><a class="portfolio-navigation link" href="./portfolio.html">Portfolio</a></li>
                 <li><a class="portfolio-navigation link" href="">Contacts</a></li>
             </ul>
         </nav>
