--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             <ul class="box list">
 
                 <li class="section-end">
-                    <h2 class="main-caption" hidden> Strategy</h2>
+                    <h2 class="advantages" hidden>No content</h2>
+                    <h3 class="main-caption"> Strategy</h3>
                     <p class="main-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. </p>
                 </li>
