--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         </section>
 
         <section class="main-box">
+            <h2 class="advantages" hidden>No content</h2>
+            <ul class="list">
 
-            <ul class="box list">
-                <h2 class="advantages" hidden>No content</h2>
                 <li class="section-end">
                     <h3 class="main-caption"> Strategy</h3>
                     <p class="main-text">Our goal is to identify the business
