--- a/portfolio.html
+++ b/portfolio.html
@@ -42,9 +42,8 @@
 
         <section class="list">
 
-            <h1>button</h1>
-            <a href="#" hidden>Приховане посилання </a>
-            <!-- button -->
+            
+            <h1 class="advantages" hidden>No content</h1>
 
             <ul class="portfolio-button list">
                 <li><button class="all-button" type="button">All</button></li>
