--- a/portfolio.html
+++ b/portfolio.html
@@ -42,14 +42,14 @@
 
         <section class="list">
 
-            
+
             <h1 class="advantages" hidden>No content</h1>
 
             <ul class="portfolio-button list">
-                <li><button class="all-button" type="button">All</button></li>
-                <li><button class="" type="button">Web Site</button></li>
-                <li><button class="" type="button">App</button></li>
-                <li><button class="" type="button">Marketing</button></li>
+                <li><button class="navigation-button" type="button">All</button></li>
+                <li><button class="navigation-button" type="button">Web Site</button></li>
+                <li><button class="navigation-button" type="button">App</button></li>
+                <li><button class="navigation-button" type="button">Marketing</button></li>
 
             </ul>
 
