--- a/portfolio.html
+++ b/portfolio.html
@@ -49,6 +49,7 @@
                 <li><button class="navigation-button" type="button">All</button></li>
                 <li><button class="navigation-button" type="button">Web Site</button></li>
                 <li><button class="navigation-button" type="button">App</button></li>
+                <li><button class="navigation-button" type="button">Design</button></li>
                 <li><button class="navigation-button" type="button">Marketing</button></li>
 
             </ul>
